# stellar-heterogeneity-modelling

./: .gitignore  LICENSE  README.md  documentation.md  notes.txt  pyproject.toml  test
neater_observed_spectra_folder/MAST_2026-03-06T1630/: folder_structure_specification.md
notes/: [old]notes.md  notes.txt
phoenix-grid-creator/: README.md  pyproject.toml
phoenix-grid-creator/old/: [old]testing_fits_to_hdf5.ipynb
phoenix-grid-creator/src/phoenix_grid_creator/: PHOENIX_filename_conventions.py  [old]testing_fits_to_hdf5.ipynb  basic_plotter.py  fits_to_hdf5.py  main.py  testing_fits_to_hdf5.ipynb
spots-and-faculae-model/: pyproject.toml
spots-and-faculae-model/src/facula_and_spot_creator/: main.py
spots-and-faculae-model/src/phoenix_grid_creator/: basic_plotter.py  fits_to_hdf5.py
spots_and_faculae_model/: README.md  pyproject.toml
spots_and_faculae_model/old/: [old]testing_fits_to_hdf5.ipynb
spots_and_faculae_model/src/facula_and_spot_creator/: [old]main.py  main.py
spots_and_faculae_model/src/phoenix_grid_creator/: PHOENIX_filename_conventions.py  [old]basic_plotter.py  basic_plotter.py  fits_to_hdf5.py
spots_and_faculae_model/src/spectrum_component_analyser/: ML.ipynb  external_spectrum_reader.py  helper.py  main copy - for testing new_spectrum_grid.ipynb  main.ipynb  main.py  test.ipynb
spots_and_faculae_model/src/spots_and_faculae_model/: [depr]external_spectrum_reader.py  external_spectrum_reader.py  new_spectrum_grid.py  phoenix_spectrum.py  plot_transits.ipynb  readers.py  simpler_spectral_grid.py  spectrum.py  spectrum_grid.py  spectrum_utils.py
src/chi_squared_minimisation/: main.ipynb
src/phoenix_grid_creator/: calibration.py  fits_to_hdf5.py
src/spectrum_component_analyser/: HARPS_ML.ipynb  HARPS_test.ipynb  ML.ipynb  helper.py  interpolated_spectrum.py  main.ipynb  minimisation.py  plot_transits.ipynb
src/spectrum_component_analyser/internals/: phoenix_spectrum.py  readers.py  spectral_grid.py  spectral_list.py  spectrum.py
src/spectrum_component_analyser/internals/readers/: JWST.py
src/spectrum_component_analyser/internals/readers/HARPS/: HARPS.py
src/spectrum_component_analyser/internals/readers/JWST/: NIRISS.py  instruments.py  main.py  reader.py  testing.py
src/spots_and_faculae_model/: plot_transits.ipynb  readers.py  simpler_spectral_grid.py  spectral_grid.py  spectrum_grid.py
src/vanity/: printing_colors.py
stellar_heterogeneity_modelling/: internal_constants.py
stellar_heterogeneity_modelling/chi_squared_minimisation/: main.ipynb
stellar_heterogeneity_modelling/phoenix_grid_creator/: PHOENIX_filename_conventions.py  fits_to_hdf5.py
stellar_heterogeneity_modelling/spectrum_component_analyser/: HARPS_ML.ipynb  ML.ipynb  internal_constants.py  interpolated_spectrum.py  main.ipynb  plot_transits.ipynb
stellar_heterogeneity_modelling/spectrum_component_analyser/internals/: phoenix_spectrum.py  spectral_component.py  spectral_grid.py
stellar_heterogeneity_modelling/spectrum_component_analyser/internals/readers/: folder_structure_specification.md
stellar_heterogeneity_modelling/spectrum_component_analyser/internals/readers/JWST/: file_reader.py  folder_reader.py
