[project]
name = "stellar_heterogeneity_modelling"
version = "0.0.0.dev0"
description = ""
authors = [
    {name = "ScatteredComet",email = "benjaminleogreen@gmail.com"}
]
license="MIT"
license-files=["LICENSE"]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "astropy (>=7.1.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tables (>=3.10.2,<4.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "specutils (>=2.2.0,<3.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "ipympl (>=0.9.8,<0.10.0)",
    "torch (>=2.9.1,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "typer (>=0.24.1,<0.25.0)"
]

[project.urls]
repository="https://github.com/Part-III-Project-48/stellar-heterogeneity-modelling"

[tool.poetry]
# Provide some shortened names for subpackages
packages = [{include = "phoenix_grid_creator", from = "stellar_heterogeneity_modelling"},
			{include = "spectrum_component_analyser", from = "stellar_heterogeneity_modelling"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
