[project]
name = "phoenix-grid-creator"
version = "0.1.0"
description = ""
authors = [
    {name = "BenBlueeeee",email = "benjaminleogreen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy (>=7.1.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "phoenix_grid_creator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
