[project]
name = "spots-and-faculae-model"
version = "0.1.0"
description = ""
authors = [
    {name = "BenBlueeeee",email = "benjaminleogreen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy (>=7.1.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tables (>=3.10.2,<4.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "specutils (>=2.2.0,<3.0.0)",
    "h5py (>=3.14.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "spots-and-faculae-model", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
